@@ -1,4 +1,4 @@
-check_PROGRAMS=testfind1 testumwsu1 testumwsuscan1
+check_PROGRAMS=testfind1 testumwsu1 testumwsuscan1 testxmlreport1
 
 testfind1_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src
 testfind1_LDADD=$(top_builddir)/src/libumwsu.la @GMODULE2_LIBS@ -lmagic
@@ -19,3 +19,6 @@ testmodule_la_SOURCES=testmodule.c
 testmodule_la_LDFLAGS= -module -avoid-version
 testmodule_la_CFLAGS=-I$(top_srcdir)/include
 
+testxmlreport1_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @LIBXML2_CFLAGS@
+testxmlreport1_LDADD=$(top_builddir)/src/libumwsu.la @GMODULE2_LIBS@ @LIBXML2_LIBS@ -lmagic
+testxmlreport1_SOURCES=testxmlreport1.c
